--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,7 +13,8 @@ services:
     volumes:
       - tmp_vol:/tmp
       - sogoconf:/etc/sogo:ro
-      - ./postfix/main.cf:/var/spool/postfix/main.cf:ro
+      - postfix_spool:/var/spool/postfix
+      - ./postfix/main.cf:/etc/postfix/main.cf:ro
     tmpfs:
       - /run
       - /var/lib/nginx
