--- a/supervisor/postfix.conf
+++ b/supervisor/postfix.conf
@@ -9,4 +9,9 @@ autorestart     = true
 directory       = /etc/postfix
 startsecs       = 0
 
+stdout_logfile=/dev/stdout
+stdout_logfile_maxbytes=0
+stderr_logfile=/dev/stderr
+stderr_logfile_maxbytes=0
+
 # vim: syn=cfg
